sonarqube minro fixes